<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="app_name">懒人订餐</string>
    <string name="app_version">懒人订餐 Android 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example action</string>
    <string name="action_search">搜索</string>
    <string name="action_post_express">发布快递</string>
    <string name="action_add_address">添加地址</string>
    <string name="action_setting">设置</string>
    <string name="action_import_sms">本地导入</string>
    <string name="action_login">登录</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_ready">释放刷新</string>
    <string name="listview_header_hint_loading">正在加载...</string>
    <string name="listview_header_hint_refresh_complete">刷新完成</string>
    <string name="listview_header_hint_refresh_fail">刷新失败</string>
    <string name="listview_footer_hint_normal">查看更多</string>
    <string name="listview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_cart">购物车</string>
    <string name="title_activity_settle">结算</string>
    <string name="title_activity_main">首页</string>
    <string name="title_activity_post_express">提交快递</string>
    <string name="title_activity_choice_sms">选择短信</string>
    <string name="title_activity_feedback">提交反馈</string>
    <string name="title_fragment_express_list">快递记录</string>
    <string name="title_fragment_history_order">历史订单</string>
    <string name="title_fragment_about_us">关于我们</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_user_center">个人中心</string>
    <string name="title_activity_edit_password">修改密码</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_manage_address"> 管理地址</string>
    <string name="title_activity_update_address"> 修改地址</string>
    <string name="title_activity_insert_address"> 新增地址</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_shop">店家列表</string>
    <string name="title_activity_goods">商品</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_alter_phone_binding">修改手机绑定</string>
    <string name="title_activity_alter_phone_verify">修改手机验证</string>
    <string name="settings_title_no_drawing_mode">开启无图模式</string>
    <string name="settings_title_clear_cache">清除缓存</string>
    <string name="settings_title_feedback">意见反馈</string>
    <string name="settings_title_logout">退出登录</string>
    <string name="settings_title_check_update">检查更新</string>
    <string name="settings_title_about_us">关于我们</string>
    <string name="settings_title_function_desc">功能介绍</string>
    <string name="settings_title_welcome_page">欢迎页</string>
    <string name="settings_version_current">版本 V%1$s</string>
    <string name="text_no_network">获取数据失败，请检查网络，点击屏幕重新加载</string>
    <string name="text_phone">联系电话</string>
    <string name="text_address">联系地址</string>
    <string name="text_name">姓名</string>
    <string name="text_no_record">暂无记录，点击屏幕重新加载</string>
    <string name="text_phone_remove_binding">手机更换或遗失？请致电客服申诉解除绑定</string>
    <string name="text_telephone">123–456–7890</string>
    <string name="text_please_login">请登录</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_go_to_register">去注册</string>
    <string name="text_please_choose_address">请选择地址</string>
    <string name="text_drawer_menu_open">Open navigation drawer</string>
    <string name="text_drawer_menu_close">Close navigation drawer</string>
    <string name="notification_app_downloading">正在下载更新,请稍后</string>
    <string name="notification_success_download">应用已下载</string>
    <string name="notification_download_error">下载更新失败</string>
    <string name="btn_reload">重新获取</string>
    <string name="btn_login">登录</string>
    <string name="btn_submit">提交</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_next_step">下一步</string>
    <string name="btn_go_to_settle">去结算</string>
    <string name="btn_confirm_and_verify">确认并验证</string>
    <string name="btn_confirm_and_register">确认并注册</string>
    <string name="btn_confirm_and_submit">确认提交</string>
    <string name="btn_insert_address">新增地址</string>
    <string name="btn_confirm_modify">确认修改</string>
    <string name="btn_confirm_insert">确认添加</string>
    <string name="btn_obtain_auth_code">获取验证码</string>
    <string name="dialog_confirm_delete_address_title">删除地址</string>
    <string name="dialog_confirm_delete_address_content">你真的要删除该地址吗？</string>
    <string name="dialog_confirm_logout_content">你真的要退出登录吗？</string>
    <string name="input_address_hint">请输入联系地址</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="input_new_phone_hint">请输入新的手机号码</string>
    <string name="input_sms_auth_code_hint">请输入短信验证码</string>
    <string name="input_auth_code_hint">验证码</string>
    <string name="input_account_hint">用户名/手机号/邮箱</string>
    <string name="input_current_password_hint">当前密码</string>
    <string name="input_new_password_hint">新密码</string>
    <string name="input_new_password_confirm_hint">重复新密码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_password_confirm_hint">请再次输入密码</string>
    <string name="input_feedback_content_hint">请输入您要反馈的内容</string>
    <string name="input_feedback_contact_method_hint">联系方式 (邮箱/手机)</string>
    <string name="input_feedback_contact_method_error_hint">联系方式只能是邮箱或者手机</string>
    <string name="input_extra_message_hint">如果有留言,请在此处填写</string>
    <string name="input_paste_sms_hint">请在此处粘贴您收到的短信</string>
    <string name="input_contact_address_hint">请输入联系地址</string>
    <string name="input_name_hint">请输入姓名</string>
    <string name="register_name">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ~!@#$%^*()+-=:?</string>
    <string name="title_activity_about">关于我们</string>
    <string name="menu_shop">我要订餐</string>
    <string name="menu_order_list">订单中心</string>
    <string name="menu_express">代领快递</string>
</resources>