<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_reload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/gray_bg">

    <ImageView
        android:id="@+id/iv_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/no_network"
        android:layout_margin="@dimen/content_padding"/>

    <TextView
        android:id="@+id/tv_reload1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_network"
        android:textColor="@color/color_88"
        android:textSize="13.0sp"
        android:layout_margin="@dimen/content_padding"/>

    <TextView
        android:id="@+id/tv_reload2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dp"
        android:text="@string/text_no_record"
        android:textColor="@color/color_88"
        android:textSize="15.0sp"
        android:layout_margin="@dimen/content_padding"/>
</LinearLayout>
