<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    tools:mContext="com.cisoft.lazyorder.ui.cart.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:layout_marginTop="@dimen/content_padding"
        android:background="@drawable/btn_radius_all_normal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_current_phone"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/content_margin"
            android:layout_weight="1.0"
            android:gravity="left|center"
            android:text="18996480894"
            android:textColor="@color/text_light_gray_color"
            android:textSize="16.0sp" />

        <View
            android:layout_width="@dimen/stroke"
            android:layout_height="match_parent"
            android:background="@color/stroke" />

        <Button
            android:id="@+id/btn_obtain_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/stroke"
            android:layout_marginRight="@dimen/stroke"
            android:layout_marginTop="@dimen/stroke"
            android:background="@drawable/selector_red_corners_button"
            android:padding="@dimen/content_margin"
            android:text="@string/btn_obtain_auth_code"
            android:textColor="@color/white"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_auth_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:layout_marginTop="@dimen/content_padding"
        android:background="@drawable/btn_radius_all_normal"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <EditText
            android:id="@+id/et_auth_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="left|center"
            android:hint="@string/input_sms_auth_code_hint"
            android:inputType="number"
            android:maxLength="8"
            android:singleLine="true"
            android:textColor="@color/text_edit_color"
            android:textColorHint="@color/text_edit_hint_color"
            android:textSize="16.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_and_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:layout_marginTop="@dimen/content_padding"
        android:background="@drawable/selector_red_corners_button"
        android:text="@string/btn_confirm_and_verify"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:layout_marginTop="@dimen/content_padding"
        android:gravity="right|center"
        android:text="@string/text_phone_remove_binding"
        android:textColor="@color/text_light_gray_color"
        android:textSize="13.0sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:gravity="right|center"
        android:text="@string/text_telephone"
        android:textColor="@color/text_light_gray_color"
        android:textSize="13.0sp" />
</LinearLayout>