<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    android:padding="@dimen/content_margin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_sms_content"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/content_margin"
                android:padding="@dimen/content_padding"
                android:gravity="left"
                android:hint="@string/input_paste_sms_hint"
                android:textColor="@color/text_edit_color"
                android:textColorHint="@color/text_edit_hint_color"
                android:textSize="14sp"
                android:background="@drawable/text_field"/>

            <EditText
                android:id="@+id/et_extra_message"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/content_margin"
                android:padding="@dimen/content_padding"
                android:gravity="left"
                android:hint="@string/input_extra_message_hint"
                android:textColor="@color/text_edit_color"
                android:textColorHint="@color/text_edit_hint_color"
                android:textSize="14sp"
                android:background="@drawable/text_field"/>

            <include
                android:id="@+id/rl_choice_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_margin"
                layout="@layout/layout_choose_address"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_post_express"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:layout_marginTop="@dimen/content_padding"
        android:background="@drawable/selector_red_corners_button"
        android:padding="8.0dip"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:textSize="16.0sp" />
</LinearLayout>
